FIXED: [ 374238 ] Handle left/right arrow key press in brief view (previously filtered by search bar).

Quickfix. It is maybe better to remove the filtering in KrSearchBar and instead get all key events from KrView.
Bug came with 374238.

BUG: 374238